--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"dva": "^2.2.3",
+		"frisbee": "^2.0.4",
 		"react": "16.3.1",
-		"react-native": "0.55.4"
+		"react-native": "0.55.4",
+		"react-navigation": "^2.0.2"
 	},
 	"devDependencies": {
 		"babel-jest": "23.0.0",
