--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 	"dependencies": {
 		"dva": "^2.2.3",
 		"frisbee": "^2.0.4",
+		"rc-form": "^2.2.0",
 		"react": "16.3.1",
 		"react-native": "0.55.4",
-		"react-navigation": "^2.0.2"
+		"react-navigation": "^2.0.4"
 	},
 	"devDependencies": {
 		"babel-jest": "23.0.0",
