--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"dva": "^2.2.3",
 		"frisbee": "^2.0.4",
+		"ramda": "^0.25.0",
 		"rc-form": "^2.2.0",
 		"react": "16.3.1",
 		"react-native": "0.55.4",
