--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
 		"rc-form": "^2.2.0",
 		"react": "16.3.1",
 		"react-native": "0.55.4",
+		"react-native-navbar": "^2.1.0",
+		"react-native-parallax-scroll-view": "^0.21.0",
 		"react-native-vector-icons": "^4.6.0",
-		"react-navigation": "^2.0.4"
+		"react-navigation": "^2.0.4",
+		"recompose": "^0.27.1"
 	},
 	"devDependencies": {
 		"babel-jest": "23.0.0",
 		"babel-preset-react-native": "4.0.0",
+		"babel-preset-react-native-stage-0": "^1.0.1",
 		"jest": "23.0.0",
 		"react-test-renderer": "16.3.1"
 	},
