--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"antd-mobile": "^2.1.10",
+		"axios": "^0.18.0",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"dva": "^2.2.3",
-		"frisbee": "^2.0.4",
+		"dva-core": "^1.2.1",
+		"dva-loading": "^2.0.1",
 		"ramda": "^0.25.0",
 		"rc-form": "^2.2.0",
 		"react": "16.3.1",
 		"react-native": "0.55.4",
+		"react-native-config": "^0.11.5",
 		"react-native-vector-icons": "^4.6.0",
-		"react-navigation": "^2.0.4"
+		"react-navigation": "^2.0.4",
+		"react-navigation-redux-helpers": "^1.1.1",
+		"react-redux": "^5.0.7",
+		"redux-persist": "4.10.2"
 	},
 	"devDependencies": {
 		"babel-jest": "23.0.0",
