--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
 		"react-native-elements": "^0.19.1",
 		"react-native-navbar": "^2.1.0",
 		"react-native-parallax-scroll-view": "^0.21.0",
+		"react-native-svg": "^6.3.1",
+		"react-native-swiper": "^1.5.13",
 		"react-native-vector-icons": "^4.6.0",
 		"react-navigation": "^2.0.4",
-		"recompose": "^0.27.1"
+		"recompose": "^0.27.1",
+		"victory-native": "^0.17.4"
 	},
 	"devDependencies": {
 		"babel-jest": "23.0.0",
