--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"dva-core": "^1.2.1",
 		"dva-loading": "^2.0.1",
+		"moment": "^2.22.1",
 		"ramda": "^0.25.0",
 		"rc-form": "^2.2.0",
 		"react": "16.3.1",
 		"react-native": "0.55.4",
 		"react-native-config": "^0.11.5",
 		"react-native-elements": "^0.19.1",
+		"react-native-menu": "^0.23.0",
 		"react-native-navbar": "^2.1.0",
 		"react-native-parallax-scroll-view": "^0.21.0",
 		"react-native-svg": "^6.3.1",
