--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"accounting": "^0.4.1",
 		"antd-mobile": "^2.1.10",
 		"axios": "^0.18.0",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
