--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"react-native": "0.55.4",
 		"react-native-config": "^0.11.5",
 		"react-native-elements": "^0.19.1",
+		"react-native-iphone-x-helper": "^1.0.3",
 		"react-native-menu": "^0.23.0",
+		"react-native-modal-dropdown": "^0.6.2",
 		"react-native-navbar": "^2.1.0",
 		"react-native-parallax-scroll-view": "^0.21.0",
 		"react-native-svg": "^6.3.1",
