--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-shimmer')
     compile project(':react-native-config')
     compile project(':react-native-svg')
     compile project(':react-native-vector-icons')
