--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-native-menu": "^0.23.0",
 		"react-native-modal-dropdown": "^0.6.2",
 		"react-native-parallax-scroll-view": "^0.21.0",
+		"react-native-shimmer": "^0.3.2",
 		"react-native-svg": "^6.3.1",
 		"react-native-swiper": "^1.5.13",
 		"react-native-vector-icons": "^4.6.0",
