add android script

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=nodecap.keystore
+MYAPP_RELEASE_KEY_ALIAS=nodecap
+MYAPP_RELEASE_STORE_PASSWORD=Nodecap2018
+MYAPP_RELEASE_KEY_PASSWORD=Nodecap2018
