--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"start-ios": "react-native run-ios",
 		"start-android": "react-native run-android",
+		"build-android": "cd android && ./gradlew assembleRelease",
 		"test": "jest"
 	},
 	"dependencies": {
