--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
 		"react-native-modal-dropdown": "^0.6.2",
 		"react-native-parallax-scroll-view": "^0.21.0",
 		"react-native-shimmer": "^0.3.2",
+		"react-native-splash-screen": "^3.0.7",
 		"react-native-svg": "^6.3.1",
 		"react-native-swiper": "^1.5.13",
+		"react-native-tab-view": "^0.0.78",
 		"react-native-vector-icons": "^4.6.0",
 		"react-navigation": "^2.0.4",
 		"react-navigation-redux-helpers": "^1.1.1",
