--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,5 @@ API_URL=http://47.100.101.130/v1
 CDN_URL=https://nodecap-production-file.oss-cn-beijing.aliyuncs.com/
 WHITE_PAPER_URL=https://nodecap-production-file.oss-cn-beijing.aliyuncs.com/whitepaper/
 OFFICIAL_WEBSITE=http://www.nodecap.com/business_plan/index
+CODEPUSH_DEPLOYMENT_KEY_IOS=fEEUEvg0WA4pANjT_z4VONdyGak026c1ed21-ab88-42b0-951d-adcc7812f349
+CODEPUSH_DEPLOYMENT_KEY_ANDROID=F4ZKgbdbwrVXN2M77YtxuiXhUzp326c1ed21-ab88-42b0-951d-adcc7812f349
