--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"rc-form": "^2.2.0",
 		"react": "16.3.1",
 		"react-native": "0.55.4",
+		"react-native-code-push": "^5.3.4",
 		"react-native-config": "^0.11.5",
 		"react-native-elements": "^0.19.1",
 		"react-native-iphone-x-helper": "^1.0.3",
@@ -29,10 +30,10 @@
 		"react-native-splash-screen": "^3.0.7",
 		"react-native-svg": "^6.3.1",
 		"react-native-swiper": "^1.5.13",
-		"react-native-tab-view": "^0.0.78",
+		"react-native-tab-view": "^1.0.0",
 		"react-native-vector-icons": "^4.6.0",
 		"react-navigation": "^2.0.4",
-		"react-navigation-redux-helpers": "^1.1.1",
+		"react-navigation-redux-helpers": "^1.1.2",
 		"react-redux": "^5.0.7",
 		"recompose": "^0.27.1",
 		"redux-persist": "4.10.2",
