--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,6 +76,12 @@ project.ext.react = [
     entryFile: "index.js"
 ]
 
+project.ext.envConfigFiles = [
+        debug: ".env.development",
+        release: ".env.production",
+        staging: ".env.staging",
+]
+
 apply from: "../../node_modules/react-native/react.gradle"
 apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
