--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"react-native-splash-screen": "^3.0.7",
 		"react-native-svg": "^6.3.1",
 		"react-native-swiper": "^1.5.13",
-		"react-native-tab-view": "^1.0.0",
+		"react-native-tab-view": "0.0.78",
 		"react-native-vector-icons": "^4.6.0",
 		"react-navigation": "^2.0.4",
 		"react-navigation-redux-helpers": "^1.1.2",
