--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-native-iphone-x-helper": "^1.0.3",
 		"react-native-modal-dropdown": "^0.6.2",
 		"react-native-parallax-scroll-view": "^0.21.0",
+		"react-native-platform-touchable": "^1.1.1",
 		"react-native-shimmer": "^0.3.2",
 		"react-native-splash-screen": "^3.0.7",
 		"react-native-svg": "^6.3.1",
