add linear gradient

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
 		"react-native-config": "^0.11.5",
 		"react-native-elements": "^0.19.1",
 		"react-native-iphone-x-helper": "^1.0.3",
+		"react-native-linear-gradient": "^2.4.0",
 		"react-native-modal-dropdown": "^0.6.2",
 		"react-native-parallax-scroll-view": "^0.21.0",
 		"react-native-platform-touchable": "^1.1.1",
+		"react-native-shadow": "^1.2.2",
 		"react-native-shimmer": "^0.3.2",
 		"react-native-splash-screen": "^3.0.7",
 		"react-native-svg": "^6.3.1",
