--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -162,6 +162,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-linear-gradient')
     compile project(':react-native-code-push')
     compile project(':react-native-shimmer')
     compile project(':react-native-config')
