--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
 		"eslint-plugin-react": "^7.0.1",
 		"babel-eslint": "^8.1.2"
 	},
+  "lint-staged": {
+    "**/*.{js,jsx}": "lint-staged:js"
+  },
 	"jest": {
 		"preset": "react-native"
 	}
