--- a/package.json
+++ b/package.json
@@ -1,75 +1,78 @@
 {
-	"name": "nodecap",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"precommit": "npm run lint-staged",
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"start-ios": "react-native run-ios",
-		"start-android": "react-native run-android",
-		"build-android": "cd android && ./gradlew assembleRelease",
-		"test": "jest",
-		"lint": "eslint --ext .js app",
-		"lint:fix": "eslint --fix --ext .js src mock tests && npm run lint:style",
-		"lint-staged": "lint-staged",
-		"lint-staged:js": "eslint --ext .js"
-	},
-	"dependencies": {
-		"accounting": "^0.4.1",
-		"antd-mobile": "^2.1.10",
-		"axios": "^0.18.0",
-		"dva-core": "^1.2.1",
-		"dva-loading": "^2.0.1",
-		"moment": "^2.22.1",
-		"ramda": "^0.25.0",
-		"rc-form": "^2.2.0",
-		"react": "16.3.1",
-		"react-native": "0.55.4",
-		"react-native-code-push": "^5.3.4",
-		"react-native-config": "^0.11.5",
-		"react-native-elements": "^0.19.1",
-		"react-native-iphone-x-helper": "^1.0.3",
-		"react-native-linear-gradient": "^2.4.0",
-		"react-native-modal-dropdown": "^0.6.2",
-		"react-native-parallax-scroll-view": "^0.21.0",
-		"react-native-platform-touchable": "^1.1.1",
-		"react-native-shadow": "^1.2.2",
-		"react-native-shimmer": "^0.3.2",
-		"react-native-splash-screen": "^3.0.7",
-		"react-native-svg": "^6.3.1",
-		"react-native-swiper": "^1.5.13",
-		"react-native-tab-view": "0.0.78",
-		"react-native-vector-icons": "^4.6.0",
-		"react-navigation": "^2.0.4",
-		"react-navigation-redux-helpers": "^1.1.2",
-		"react-redux": "^5.0.7",
-		"recompose": "^0.27.1",
-		"redux-persist": "4.10.2",
-		"victory-native": "^0.17.4"
-	},
-	"devDependencies": {
-		"babel-eslint": "^8.1.2",
-		"babel-jest": "23.0.0",
-		"babel-plugin-import": "^1.7.0",
-		"babel-preset-react-native": "4.0.0",
-		"babel-preset-react-native-stage-0": "^1.0.1",
-		"eslint": "^4.14.0",
-		"eslint-config-airbnb": "^16.0.0",
-		"eslint-plugin-babel": "^4.0.0",
-		"eslint-plugin-compat": "^2.1.0",
-		"eslint-plugin-import": "^2.8.0",
-		"eslint-plugin-jsx-a11y": "^6.0.3",
-		"eslint-plugin-markdown": "^1.0.0-beta.6",
-		"eslint-plugin-react": "^7.0.1",
-		"husky": "^0.14.3",
-		"jest": "23.0.0",
-		"lint-staged": "^7.1.3",
-		"react-test-renderer": "16.3.1"
-	},
-	"lint-staged": {
-		"**/*.{js,jsx}": "lint-staged:js"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "nodecap",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "precommit": "npm run lint-staged",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start-ios": "react-native run-ios",
+    "start-android": "react-native run-android",
+    "build-android": "cd android && ./gradlew assembleRelease",
+    "test": "jest",
+    "lint": "eslint --ext .js app",
+    "lint:fix": "eslint --fix --ext .js src mock tests && npm run lint:style",
+    "lint-staged": "lint-staged",
+    "lint-staged:js": "eslint --ext .js"
+  },
+  "dependencies": {
+    "accounting": "^0.4.1",
+    "antd-mobile": "^2.1.10",
+    "axios": "^0.18.0",
+    "dva-core": "^1.2.1",
+    "dva-loading": "^2.0.1",
+    "moment": "^2.22.1",
+    "ramda": "^0.25.0",
+    "rc-form": "^2.2.0",
+    "react": "16.3.1",
+    "react-native": "0.55.4",
+    "react-native-code-push": "^5.3.4",
+    "react-native-config": "^0.11.5",
+    "react-native-elements": "^0.19.1",
+    "react-native-iphone-x-helper": "^1.0.3",
+    "react-native-linear-gradient": "^2.4.0",
+    "react-native-modal-dropdown": "^0.6.2",
+    "react-native-parallax-scroll-view": "^0.21.0",
+    "react-native-platform-touchable": "^1.1.1",
+    "react-native-shadow": "^1.2.2",
+    "react-native-shimmer": "^0.3.2",
+    "react-native-splash-screen": "^3.0.7",
+    "react-native-svg": "^6.3.1",
+    "react-native-swiper": "^1.5.13",
+    "react-native-tab-view": "0.0.78",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.0.4",
+    "react-navigation-redux-helpers": "^1.1.2",
+    "react-redux": "^5.0.7",
+    "recompose": "^0.27.1",
+    "redux-persist": "4.10.2",
+    "victory-native": "^0.17.4"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.3",
+    "babel-jest": "23.0.0",
+    "babel-plugin-import": "^1.7.0",
+    "babel-preset-react-native": "4.0.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-compat": "^2.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-markdown": "^1.0.0-beta.6",
+    "eslint-plugin-react": "^7.0.1",
+    "husky": "^0.14.3",
+    "jest": "23.0.0",
+    "lint-staged": "^7.1.3",
+    "react-test-renderer": "16.3.1"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
