--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rc-form": "^2.2.0",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-blur": "^3.2.2",
     "react-native-code-push": "^5.3.4",
     "react-native-config": "^0.11.5",
     "react-native-elements": "^0.19.1",
