--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.55.4",
     "react-native-blur": "^3.2.2",
     "react-native-code-push": "^5.3.4",
+    "react-native-communications": "^2.2.1",
     "react-native-config": "^0.11.5",
     "react-native-elements": "^0.19.1",
     "react-native-iphone-x-helper": "^1.0.3",
