--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-native-platform-touchable": "^1.1.1",
     "react-native-shadow": "^1.2.2",
     "react-native-shimmer": "^0.3.2",
-    "react-native-splash-screen": "^3.0.7",
+    "react-native-splash-screen": "3.0.6",
     "react-native-svg": "^6.3.1",
     "react-native-swiper": "^1.5.13",
     "react-native-tab-view": "0.0.78",
