--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "antd-mobile": "^2.1.11",
     "axios": "^0.18.0",
     "dva-core": "^1.3.0",
-    "dva-loading": "^2.0.2",
+    "dva-loading": "^2.0.3",
     "moment": "^2.22.2",
     "ramda": "^0.25.0",
     "rc-form": "^2.2.0",
@@ -37,12 +37,12 @@
     "react-native-platform-touchable": "^1.1.1",
     "react-native-shadow": "^1.2.2",
     "react-native-shimmer": "^0.3.2",
-    "react-native-splash-screen": "3.0.6",
+    "react-native-splash-screen": "^3.0.9",
     "react-native-svg": "^6.3.1",
     "react-native-swiper": "^1.5.13",
-    "react-native-tab-view": "0.0.78",
+    "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.2.4",
+    "react-navigation": "2.2.5",
     "react-navigation-redux-helpers": "^1.1.2",
     "react-redux": "^5.0.7",
     "recompose": "^0.27.1",
