add build android staging script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start-ios": "react-native run-ios",
     "start-android": "react-native run-android",
     "build-android": "cd android && ./gradlew assembleRelease && cp ./app/build/outputs/apk/app-release.apk $HOME/Desktop",
+    "build-android:staging": "cd android && ENVFILE=.env.staging ./gradlew assembleRelease && cp ./app/build/outputs/apk/app-release.apk $HOME/Desktop",
     "test": "jest",
     "lint": "eslint --ext .js app",
     "lint:fix": "eslint --fix --ext .js src mock tests && npm run lint:style",
