--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "lint": "eslint --ext .js app",
     "lint:fix": "eslint --fix --ext .js src mock tests && npm run lint:style",
     "lint-staged": "lint-staged",
-    "lint-staged:js": "eslint --ext .js"
+    "lint-staged:js": "eslint --ext .js",
+    "codepush:android": "code-push release-react hotnode-android android -d Production",
+    "codepush:android:staging": "code-push release-react hotnode-android android -d Staging",
+    "codepush:ios": "code-push release-react hotnode-ios ios -d Production -m",
+    "codepush:ios:staging": "code-push release-react hotnode-ios ios -d Staging -m"
   },
   "dependencies": {
     "accounting": "^0.4.1",
@@ -27,6 +31,7 @@
     "react-native": "0.55.4",
     "react-native-blur": "^3.2.2",
     "react-native-code-push": "^5.3.4",
+    "react-native-code-push-saga": "^1.0.1",
     "react-native-communications": "^2.2.1",
     "react-native-config": "^0.11.5",
     "react-native-elements": "^0.19.1",
@@ -35,6 +40,7 @@
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-parallax-scroll-view": "^0.21.0",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-progress": "^3.5.0",
     "react-native-shadow": "^1.2.2",
     "react-native-shimmer": "^0.3.2",
     "react-native-splash-screen": "3.0.6",
