third party component

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -166,6 +166,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-view-shot')
     compile project(':react-native-blur')
     compile project(':react-native-linear-gradient')
     compile project(':react-native-splash-screen')
