--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-swiper": "^1.5.13",
     "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^4.6.0",
+    "react-native-view-shot": "^2.4.0",
     "react-navigation": "2.2.5",
     "react-navigation-redux-helpers": "^1.1.2",
     "react-redux": "^5.0.7",
