--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-code-push-saga": "^1.0.1",
     "react-native-communications": "^2.2.1",
     "react-native-config": "^0.11.5",
+    "react-native-easy-grid": "^0.1.17",
     "react-native-elements": "^0.19.1",
     "react-native-iphone-x-helper": "^1.0.3",
     "react-native-linear-gradient": "^2.4.0",
