--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-parallax-scroll-view": "^0.21.1",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
+    "react-native-read-more-text": "^1.1.0",
     "react-native-shadow": "^1.2.2",
     "react-native-shimmer": "^0.3.2",
     "react-native-splash-screen": "^3.0.9",
@@ -49,6 +50,7 @@
     "react-native-swiper": "^1.5.13",
     "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^4.6.0",
+    "react-native-view-more-text": "^2.0.0",
     "react-navigation": "2.2.5",
     "react-navigation-redux-helpers": "^1.1.2",
     "react-redux": "^5.0.7",
