--- a/.eslintrc
+++ b/.eslintrc
@@ -73,7 +73,8 @@
     "operator-assignment": 0,
     "react/no-array-index-key": 0,
     "react/no-unused-prop-types": 0,
-    "react/require-default-props": 0
+    "react/require-default-props": 0,
+    "class-methods-use-this": 0
   },
   "parserOptions": {
     "ecmaFeatures": {
