--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rc-form": "^2.2.0",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-animatable": "^1.3.0",
     "react-native-blur": "^3.2.2",
     "react-native-code-push": "^5.3.5",
     "react-native-code-push-saga": "^1.0.1",
@@ -37,6 +38,7 @@
     "react-native-config": "^0.11.5",
     "react-native-easy-grid": "^0.1.17",
     "react-native-elements": "^0.19.1",
+    "react-native-exit-app": "^1.0.0",
     "react-native-iphone-x-helper": "^1.0.3",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-modal-dropdown": "^0.6.2",
