--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-iphone-x-helper": "^1.0.3",
     "react-native-linear-gradient": "^2.4.0",
+    "react-native-modal": "^6.1.0",
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-parallax-scroll-view": "^0.21.1",
     "react-native-platform-touchable": "^1.1.1",
@@ -50,6 +51,7 @@
     "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^4.6.0",
     "react-native-view-shot": "^2.4.0",
+    "react-native-wechat": "^1.9.9",
     "react-navigation": "2.2.5",
     "react-navigation-redux-helpers": "^1.1.2",
     "react-redux": "^5.0.7",
