--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -166,6 +166,8 @@ android {
 }
 
 dependencies {
+    compile project(':RCTWeChat')
+    compile project(':react-native-wechat')
     compile project(':react-native-view-shot')
     compile project(':react-native-blur')
     compile project(':react-native-linear-gradient')
