--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
     "react-native-read-more-text": "^1.1.0",
+    "react-native-sentry": "^0.38.1",
     "react-native-shadow": "^1.2.2",
     "react-native-shimmer": "^0.3.2",
     "react-native-splash-screen": "^3.0.9",
