--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^0.18.0",
     "dva-core": "^1.3.0",
     "dva-loading": "^2.0.3",
+    "jcore-react-native": "^1.2.6",
+    "jpush-react-native": "^2.2.5",
     "moment": "^2.22.2",
     "ramda": "^0.25.0",
     "rc-form": "^2.2.0",
