--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,8 +109,8 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "com.nodecap.hotnode"
@@ -187,7 +187,7 @@ dependencies {
     compile project(':react-native-svg')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
+    compile "com.android.support:appcompat-v7:27+"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
