--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-exit-app": "^1.0.0",
     "react-native-iphone-x-helper": "^1.0.3",
     "react-native-linear-gradient": "^2.4.0",
+    "react-native-menu": "^0.23.0",
     "react-native-modal": "^6.1.0",
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-parallax-scroll-view": "^0.21.3",
@@ -53,7 +54,7 @@
     "react-native-shadow": "^1.2.2",
     "react-native-shimmer": "^0.3.2",
     "react-native-splash-screen": "^3.0.9",
-    "react-native-svg": "^6.3.1",
+    "react-native-svg": "^6.4.1",
     "react-native-swiper": "^1.5.13",
     "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^4.6.0",
