--- a/.eslintrc
+++ b/.eslintrc
@@ -74,7 +74,8 @@
     "react/no-array-index-key": 0,
     "react/no-unused-prop-types": 0,
     "react/require-default-props": 0,
-    "class-methods-use-this": 0
+    "class-methods-use-this": 0,
+    "arrow-parens": 0
   },
   "parserOptions": {
     "ecmaFeatures": {
