--- a/ios/nodecap/Info.plist
+++ b/ios/nodecap/Info.plist
@@ -60,7 +60,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Hotnode 需要您的同意, 才能写入相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
