--- a/ios/nodecap/nodecap.entitlements
+++ b/ios/nodecap/nodecap.entitlements
@@ -6,5 +6,9 @@
 	<string>development</string>
 	<key>com.apple.developer.default-data-protection</key>
 	<string>NSFileProtectionComplete</string>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.nodecap.hotnode</string>
+	</array>
 </dict>
 </plist>
