--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-exit-app": "^1.0.0",
     "react-native-iphone-x-helper": "^1.0.3",
+    "react-native-keychain": "^3.0.0-rc.3",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-modal": "^6.3.0",
     "react-native-modal-dropdown": "^0.6.2",
