--- a/.eslintrc
+++ b/.eslintrc
@@ -75,7 +75,8 @@
     "react/no-unused-prop-types": 0,
     "react/require-default-props": 0,
     "class-methods-use-this": 0,
-    "arrow-parens": 0
+    "arrow-parens": 0,
+    "import/no-mutable-exports": 0
   },
   "parserOptions": {
     "ecmaFeatures": {
