--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "axios": "^0.18.0",
     "dva-core": "^1.3.0",
     "dva-loading": "^2.0.3",
-    "jcore-react-native": "^1.2.6",
-    "jpush-react-native": "^2.2.5",
+    "jcore-react-native": "^1.2.7",
+    "jpush-react-native": "^2.2.6",
     "moment": "^2.22.2",
     "ramda": "^0.25.0",
     "rc-form": "^2.2.0",
@@ -41,6 +41,7 @@
     "react-native-easy-grid": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-exit-app": "^1.0.0",
+    "react-native-image-picker": "^0.26.10",
     "react-native-iphone-x-helper": "^1.0.3",
     "react-native-keychain": "^3.0.0-rc.3",
     "react-native-linear-gradient": "^2.4.0",
@@ -50,7 +51,7 @@
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
     "react-native-read-more-text": "^1.1.0",
-    "react-native-sentry": "^0.38.1",
+    "react-native-sentry": "^0.38.2",
     "react-native-shimmer": "^0.3.2",
     "react-native-splash-screen": "^3.0.9",
     "react-native-svg": "^6.4.1",
