--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -172,6 +172,7 @@ android {
 }
 
 dependencies {
+    compile project(':realm')
     compile project(':react-native-image-picker')
     compile project(':react-native-keychain')
     compile project(':jcore-react-native')
