--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-navigation": "2.2.5",
     "react-navigation-redux-helpers": "^1.1.2",
     "react-redux": "^5.0.7",
+    "realm": "^2.13.0",
     "recompose": "^0.27.1",
     "redux-persist": "4.10.2",
     "victory-native": "^0.18.2"
