--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "accounting": "^0.4.1",
     "antd-mobile": "^2.1.11",
     "axios": "^0.18.0",
+    "base-64": "^0.1.0",
     "dva-core": "^1.3.0",
     "dva-loading": "^2.0.3",
     "jcore-react-native": "^1.2.7",
