--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,3 +20,4 @@ MYAPP_RELEASE_STORE_PASSWORD=Nodecap2018
 systemProp.http.proxyPort=1086
 MYAPP_RELEASE_STORE_FILE=nodecap.keystore
 android.useDeprecatedNdk=true
+android.enableAapt2=false
