--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "start-ios": "react-native run-ios",
     "start-android": "react-native run-android",
-    "build-android": "cd android && ./gradlew assembleRelease && cp ./app/build/outputs/apk/app-release.apk $HOME/Desktop",
+    "build-android": "cd android && ./gradlew assembleRelease && cp ./app/build/outputs/apk/release/app-release.apk $HOME/Desktop",
     "build-android:staging": "cd android && ENVFILE=.env.staging ./gradlew assembleRelease && cp ./app/build/outputs/apk/app-release.apk $HOME/Desktop",
     "test": "jest",
     "lint": "eslint --ext .js app",
@@ -36,6 +36,7 @@
     "react-native": "0.55.4",
     "react-native-animatable": "^1.3.0",
     "react-native-blur": "^3.2.2",
+    "react-native-camera": "^1.1.4",
     "react-native-code-push": "^5.4.0",
     "react-native-code-push-saga": "^1.0.1",
     "react-native-communications": "^2.2.1",
