--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "antd-mobile": "^2.1.11",
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
+    "bignumber.js": "^7.2.1",
     "dva-core": "^1.3.0",
     "dva-loading": "^2.0.3",
     "jcore-react-native": "^1.2.7",
@@ -46,7 +47,7 @@
     "react-native-exit-app": "^1.0.0",
     "react-native-image-picker": "^0.26.10",
     "react-native-iphone-x-helper": "^1.0.3",
-    "react-native-keychain": "^3.0.0-rc.3",
+    "react-native-keychain": "^3.0.0",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-modal": "^6.4.0",
     "react-native-modal-dropdown": "^0.6.2",
