--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-exit-app": "^1.0.0",
     "react-native-image-picker": "^0.26.10",
     "react-native-iphone-x-helper": "^1.0.3",
+    "react-native-keyboard-aware-scroll-view": "^0.6.0",
     "react-native-keychain": "^3.0.0",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-modal": "^6.5.0",
