--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-code-push-saga": "^1.0.1",
     "react-native-communications": "^2.2.1",
     "react-native-config": "^0.11.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-easy-grid": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-exit-app": "^1.0.0",
