--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,4 @@ WHITE_PAPER_URL=https://nodecap-production-file.oss-cn-beijing.aliyuncs.com/whit
 OFFICIAL_WEBSITE=http://www.nodecap.com/business_plan/index
 CODEPUSH_DEPLOYMENT_KEY_IOS=fEEUEvg0WA4pANjT_z4VONdyGak026c1ed21-ab88-42b0-951d-adcc7812f349
 CODEPUSH_DEPLOYMENT_KEY_ANDROID=F4ZKgbdbwrVXN2M77YtxuiXhUzp326c1ed21-ab88-42b0-951d-adcc7812f349
+SENSOR_SDK_URL=https://hotnode.cloud.sensorsdata.cn:4006/sa?token=2db2fd8e5bc90e08&project=production
