--- a/.env.staging
+++ b/.env.staging
@@ -4,3 +4,4 @@ WHITE_PAPER_URL=http://nodecap-staging-file.oss-cn-beijing.aliyuncs.com/whitepap
 OFFICIAL_WEBSITE=http://localhost:8000/public/project/create
 CODEPUSH_DEPLOYMENT_KEY_IOS=RIOdp4vMvo8H8Qy7SJVP6MlCmXEQ26c1ed21-ab88-42b0-951d-adcc7812f349
 CODEPUSH_DEPLOYMENT_KEY_ANDROID=0lrQGgLhRi1QI50-oYAZS0QDpT2O26c1ed21-ab88-42b0-951d-adcc7812f349
+SENSOR_SDK_URL=http://hotnode.cloud.sensorsdata.cn:8006/sa?token=2db2fd8e5bc90e08
