--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -174,6 +174,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-wechat')
     compile project(':react-native-device-info')
     compile project(':react-native-camera')
     compile project(':realm')
