--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@expo/react-native-action-sheet": "^1.0.2",
     "accounting": "^0.4.1",
-    "antd-mobile": "^2.1.11",
+    "antd-mobile": "2.1.11",
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
     "bignumber.js": "^7.2.1",
@@ -79,7 +79,8 @@
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "babel-jest": "23.0.0",
-    "babel-plugin-import": "^1.7.0",
+    "babel-plugin-import": "^1.8.0",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react-native": "4.0.0",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "eslint": "^4.14.0",
