--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
     "react-native-read-more-text": "^1.1.0",
-    "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-scrollable-tab-view": "https://github.com/hbk671104/react-native-scrollable-tab-view.git",
     "react-native-sentry": "^0.39.0",
     "react-native-shimmer": "^0.3.2",
     "react-native-splash-screen": "^3.1.1",
