--- a/.eslintrc
+++ b/.eslintrc
@@ -76,7 +76,8 @@
     "react/require-default-props": 0,
     "class-methods-use-this": 0,
     "arrow-parens": 0,
-    "import/no-mutable-exports": 0
+    "import/no-mutable-exports": 0,
+    "indent": 0
   },
   "parserOptions": {
     "ecmaFeatures": {
