--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
-API_URL=http://api.hotnode.io/v1
-WEB_URL=http://www.hotnode.io
+API_URL=https://api.hotnode.cn/v1
+WEB_URL=https://www.hotnode.cn
 CDN_URL=https://nodecap-production-file.oss-cn-beijing.aliyuncs.com/
 WHITE_PAPER_URL=https://nodecap-production-file.oss-cn-beijing.aliyuncs.com/whitepaper/
 OFFICIAL_WEBSITE=http://www.nodecap.com/business_plan/index
