--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "jpush-react-native": "^2.2.9",
     "moment": "^2.22.2",
     "ramda": "^0.25.0",
-    "rc-form": "^2.2.2",
+    "rc-form": "2.2.1",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-animatable": "^1.3.0",
@@ -54,7 +54,7 @@
     "react-native-modal": "^6.5.0",
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-parallax-scroll-view": "^0.21.3",
-    "react-native-picker-select": "^4.2.1",
+    "react-native-picker-select": "^4.3.0",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
     "react-native-read-more-text": "^1.1.0",
