--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -174,6 +174,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-pdf')
+    compile project(':rn-fetch-blob')
     compile project(':react-native-wechat')
     compile project(':react-native-device-info')
     compile project(':react-native-camera')
