--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -174,6 +174,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-orientation')
     compile project(':react-native-pdf')
     compile project(':rn-fetch-blob')
     compile project(':react-native-wechat')
