--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-linear-gradient": "^2.4.2",
     "react-native-modal": "^6.5.0",
     "react-native-modal-dropdown": "^0.6.2",
+    "react-native-orientation": "^3.1.3",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-pdf": "^5.0.4",
     "react-native-picker-select": "^4.3.0",
