--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "jpush-react-native": "^2.2.9",
     "moment": "^2.22.2",
     "ramda": "^0.25.0",
-    "rc-form": "^2.2.2",
+    "rc-form": "2.2.1",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-animatable": "^1.3.0",
