--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 API_URL=https://api.hotnode.cn/v1
+API_INDIVIDUAL_URL=https://api.personal.hotnode.cn/v1
 WEB_URL=https://www.hotnode.cn
 CDN_URL=https://nodecap-production-file.oss-cn-beijing.aliyuncs.com/
 WHITE_PAPER_URL=https://nodecap-production-file.oss-cn-beijing.aliyuncs.com/whitepaper/
