--- a/.env.staging
+++ b/.env.staging
@@ -1,4 +1,5 @@
 API_URL=http://101.132.167.95/v1
+API_INDIVIDUAL_URL=http://api.personal-dev.hotnode.cn/v1
 WEB_URL=http://nodus-staging.nodecap.com
 CDN_URL=http://nodecap-staging-file.oss-cn-beijing.aliyuncs.com/
 WHITE_PAPER_URL=http://nodecap-staging-file.oss-cn-beijing.aliyuncs.com/whitepaper/
