--- a/.env.staging
+++ b/.env.staging
@@ -1,8 +1,8 @@
 API_URL=http://api-staging.hotnode.cn/v1
 API_INDIVIDUAL_URL=http://api.personal-staging.hotnode.cn/v1
 WEB_URL=http://nodus-staging.nodecap.com
-CDN_URL=http://nodecap-staging-file.oss-cn-beijing.aliyuncs.com/
-WHITE_PAPER_URL=http://nodecap-staging-file.oss-cn-beijing.aliyuncs.com/whitepaper/
+CDN_URL=http://hotnode-staging-file.oss-cn-beijing.aliyuncs.com/
+WHITE_PAPER_URL=http://hotnode-staging-file.oss-cn-beijing.aliyuncs.com/whitepaper/
 OFFICIAL_WEBSITE=http://localhost:8000/public/project/create
 CODEPUSH_DEPLOYMENT_KEY_IOS=RIOdp4vMvo8H8Qy7SJVP6MlCmXEQ26c1ed21-ab88-42b0-951d-adcc7812f349
 CODEPUSH_DEPLOYMENT_KEY_ANDROID=0lrQGgLhRi1QI50-oYAZS0QDpT2O26c1ed21-ab88-42b0-951d-adcc7812f349
