--- a/ios/nodecap/Info.plist
+++ b/ios/nodecap/Info.plist
@@ -32,6 +32,14 @@
 				<string>hotnode</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wx9e13272f60a68c63</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
